--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
     <link rel="stylesheet" href="./css/style.css">
     <title>Personal Portfolio | Web Developer</title>
 </head>
@@ -14,32 +15,75 @@
             <nav id="navbar">
                 <div class="navbar-brand"><a href="#">RK</a></div>
                 <div class="navbar-links">
-                    <li class="navbar-link"></li>
-                    <li class="navbar-link"></li>
-                    <li class="navbar-link"></li>
+                    <li class="navbar-link"><a href="#welcome-section">About</a></li>
+                    <li class="navbar-link"><a href="#projects">Projects</a></li>
+                    <li class="navbar-link"><a href="#profile">Contact</a></li>
                 </div>
             </nav>
         </header>
         <section id="welcome-section">
-            <h1></h1>
+            <h1>I am Rinil Kunhiraman</h1>
+            <p>a Web Developer</p>
+            <a href="#profile" type="button">Contact Me</a>
         </section>
         <section id="projects">
-            <div class="project-tile">
-                <button class="project-link">view</button>
+            <h1>My Projects</h1>
+            <div class="projects-all">
+                <div class="project-tile">
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg" alt="Tribute Page">
+                    <footer>
+                        <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" class="project-link">Tribute Page</a>
+                    </footer>
+                </div>
+                <div class="project-tile">
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png" alt="Random Quote Machine">
+                    <footer>
+                        <a href="" class="project-link">Random Quote Machine</a>
+                    </footer>
+                </div>
+                <div class="project-tile">
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png" alt="Javascript Calculator">
+                    <footer>
+                        <a href="" class="project-link">Javascript Calculator</a>
+                    </footer>
+                </div>
+                <div class="project-tile">
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg" alt="Map Data across the Globe">
+                    <footer>
+                        <a href="" class="project-link">Map Data across the Globe</a>
+                    </footer>
+                </div>
+                <div class="project-tile">
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png" alt="Wikipedia Viewer">
+                    <footer>
+                        <a href="" class="project-link">Wikipedia Viewer</a>
+                    </footer>
+                </div>
+                <div class="project-tile">
+                    <img src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png" alt="Tic Tac Toe Game">
+                    <footer>
+                        <a href="" class="project-link">Tic Tac Toe Game</a>
+                    </footer>
+                </div>
             </div>
+
         </section>
         <section id="profile">
-            <h1 class="profile-heading"></h1>
-            <p></p>
+            <h1 class="profile-heading">Let's Work together</h1>
+            <p>How do you take your cofee?</p>
             <div class="profile-links">
-                <li class="profile-link"></li>
-                <li class="profile-link"></li>
-                <li class="profile-link"></li>
+                <a class="profile-link" href=""><i class="fab fa-facebook-square fa-3x"></i></a>
+                <a class="profile-link" href=""><i class="fab fa-instagram-square fa-3x"></i></a>
+                <a class="profile-link" href=""><i class="fab fa-twitter-square fa-3x"></i></a>
+                <a class="profile-link" href=""><i class="fab fa-linkedin fa-3x"></i></a>
+                <a class="profile-link" href=""><i class="fab fa-github-square fa-3x"></i></a>
+                <a class="profile-link" id="profile-link" href="https://github.com/jswebdev-github" target="_blank"><i class="fab fa-free-code-camp fa-3x"></i></a>
+
             </div>
         </section>
-        <footer>
-            <p></p>
-            <p></p>
+        <footer class="footer">
+            <p> &copy All Rights Reserved</p>
+            <p>Created for FreeCodeCamp</p>
         </footer>
     </div>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
